objects/Account_Plan_Information__c.object
<CustomObject>
    <description>R5 - Account Plan Information</description>
    <fields>
        <fullName>Account_Plan_End_Date__c</fullName>
        <description>R5 - Account Plan End Date</description>
        <label>Account Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Information_Name__c</fullName>
        <formula>HYPERLINK( Id , Account_Plan__r.Name, &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Information Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Name__c</fullName>
        <description>SFDC1778 – Record type of the parent record</description>
        <label>Account Plan Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup to User.</description>
        <label>Account Plan Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plan_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Start_Date__c</fullName>
        <description>R5 - Account Plan Start Date</description>
        <label>Account Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Year__c</fullName>
        <description>R5 - Copies the Value from Account Plan Year.</description>
        <label>Account Plan Year</label>
        <picklist>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup to Account Plan.</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Informations</relationshipLabel>
        <relationshipName>Account_Plan_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans Information</relationshipLabel>
        <relationshipName>Account_Plan_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R5 - Business Unit field.</description>
        <label>BU</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DIV__c</fullName>
        <description>R5 - Division field.</description>
        <label>DIV</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PG__c</fullName>
        <label>PG</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Plan_Record_Type__c</fullName>
        <description>SFDC1778 – Record type of the parent record</description>
        <inlineHelpText>Parent Parent Account Plan Record Type to identify record relation</inlineHelpText>
        <label>Parent Account Plan Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lines__c</fullName>
        <label>Product Lines</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Plan Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>API-{000000}</displayFormat>
        <label>Account Plan Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Informations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>